style.css
:root {
    --dark-blue: #1F2937;
    --light-blue: #3882F6;
    --light-gray: #E5E7EB;
    --site-width: 50rem;
}

body, body * {
    font-family: Roboto, 'sans-serif';
    margin: 0;
    padding: 0;
}

h1 {
    font-size: 48px;
    font-weight: 900;
    line-height: 1em;
}

h2 {
    font-size: 36px;
    font-weight: 900;
    color: var(--dark-blue);
}

h3 {
    font-size: 24px;
}

h4 {
    font-size: 18px;
}

.quote {
    font-weight: 300;
    font-style: italic;
    color: #1f2937;
    margin: 0;
}

.header_content p {
    font-size: 18px;
}

.hero, header, nav, footer {
    background-color: var(--dark-blue);
    color: white;
}

.container {
    max-width: var(--site-width);
    margin: auto;
    display: flex;
    justify-content: center;
}

section {
    padding: 5rem 0;
    display: flex;
}

header div {
    display: flex;
    justify-content: space-between;
}

nav ul {
    display: flex;
    gap: 1rem;
    list-style: none;
}

nav, .hero p, .CTA_copy p {
    color: var(--light-gray)
}

.hero .container{
    padding: 2rem 0;
    display: flex;
    gap: 5em;
}

.hero .container * {
    flex: 1;
}

.hero_content {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.hero button {
    background-color: var(--light-blue);
    color: white;
    font-weight: bold;
    font-size: 14px;
    padding: 10px 30px;
    border: none;
    border-radius: 10px;
    align-self: flex-start;
}

.hero_img {
    background-color: var(--light-gray);
    color: var(--dark-blue);
    display: flex;
    justify-content: center;
    align-items: center;
}

.random {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 2rem;
}

.four_column {
    display: flex;
    gap: 3rem;
}

.column_image {
    aspect-ratio: 1/1;
    border: 3px solid var(--light-blue);
    border-radius: 20px;
    margin-bottom: 1rem;

}

.quote_block {
    background-color: var(--light-gray);
}

.quote_block div{
    display: flex;
    flex-direction:column;
    align-items: flex-end;
    padding: 2rem 0;
}

.CTA {
    background-color: var(--light-blue);
    color: white;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    padding: 3rem 0;
    border-radius: 20px;
}

.CTA button {
    color:  white;
    background: none;
    border: 3px solid white;
    border-radius: 10px;
    padding: 0px 30px;
    font-weight: bold;
    font-size: 18px
}

footer {
    text-align: center;
    padding: 3rem;
}

